# libdevq

./: .gitignore  AUTHORS  COPYING  Makefile.am  README  README.md  configure.ac
doc/: libdevq.3
include/: devq.h  libdevq.h
src/: device.c  device_drm.c  event_monitor_freebsd.c  libdevq-1.0.pc.in
src/freebsd/: device.c  device_drm.c
tools/devq_evwatch/: devq_evwatch.c
tools/lsdri/: lsdri.c
